# pkmn-c

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt
include/: pkmn_ai.h  pkmn_battle.h  pkmn_battle_cli.h  pkmn_battler.h  pkmn_config.h  pkmn_coroutine.h  pkmn_math.h  pkmn_move.h  pkmn_rand.h  pkmn_species.h  pkmn_stats.h  pkmn_type.h
include/data/: README.txt
scripts/: parse_move.py  parse_pokemon.py  pbsparser.py
src/: main.c  pkmn_ai.c  pkmn_battle.c  pkmn_battle_cli.c  pkmn_battler.c  pkmn_math.c  pkmn_move.c  pkmn_rand.c  pkmn_stats.c  pkmn_type.c  pkmn_type.h
tests/: test_main.cpp  test_pkmn_battle.cpp  test_pkmn_battler.cpp  test_pkmn_type.cpp
